--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Have you ever Applied for loan?</span>
-          <input class="input100" type="text" name="question_4" index="" placeholder="Applied_for_loan" />
+          <input class="input100" type="text" name="question_4" index="" placeholder="applied_for_loan" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
-          <span class="label-input100">How much applied for</span>
-          <input class="input100" type="text" name="question_5" index="" placeholder="How_much_applied_for" />
+          <span class="label-input100">How much applied for?</span>
+          <input class="input100" type="text" name="question_5" index="" placeholder="how_much_applied_for" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
-          <span class="label-input100">Amount received</span>
-          <input class="input100" type="text" name="question_6" index="" placeholder="How_much_did_you_get" />
+          <span class="label-input100">Amount received?</span>
+          <input class="input100" type="text" name="question_6" index="" placeholder="how_much_did_you_get" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
@@ -136,30 +136,30 @@
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Interest Rate(%)</span>
-          <input class="input100" type="text" name="question_8" index="" placeholder="Interest Rate" />
+          <input class="input100" type="text" name="question_8" index="" placeholder="interest Rate" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Percentage repaid</span>
-          <input class="input100" type="text" name="question_8" index="" placeholder="How_much_did_you_pay_back" />
+          <input class="input100" type="text" name="question_8" index="" placeholder="how_much_did_you_pay_back" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Financial services recieved personal</span>
           <input class="input100" type="text" name="question_9" index=""
-            placeholder="Financial_services_recieved_personal" />
+            placeholder="financial_services_recieved_personal" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Financial services recieved business</span>
           <input class="input100" type="text" name="question_10" index=""
-            placeholder="Financial_services_recieved_business" />
+            placeholder="financial_services_recieved_business" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Financial services recieved botd</span>
           <input class="input100" type="text" name="question_11" index=""
-            placeholder="Financial_services_recieved_botd" />
+            placeholder="financial_services_recieved_botd" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
@@ -167,9 +167,167 @@
           <input class="input100" type="text" name="question_12" index="" placeholder="value_of_insurance_received" />
         </div>
 
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Insurance provided by </span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="insurance provided by " />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Date received insurance</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="date_received_insurance" />
+        </div>
+        
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Value of grants received</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="value_of_grants_received" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Grants provided by</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="grants provided by" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Date received grants</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="date_received_grants" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">value of micro lease received</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="value_of_micro_lease_receiveds" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Micro lease provided by</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="micro lease provided by" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Date received micro lease</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="date_received_micro_lease" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Household business finance conflict</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="value_of_micro_credit_received" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Profit spent on household</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="profit_spent_on_household" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Dont need loan if I manage well</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="dont_need_loan_if_I_manage_well" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Most critical challenge to MSME loan</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="most_critical_challenge_to_MSME_loan" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Number of female employees</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="number_of_female_employees" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Number of male employees</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder=" umber_of_male_employees" />
+        </div> 
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Number of retailers</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="number_of_retailers" />
+        </div> 
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Percent of retailers</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="percent_of_retailers" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Number of wholesalers</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="Number_of_wholesalers" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Percent of wholesalers</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="percent_of_wholesalers" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Number of final consumers</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="number_of_final_consumers" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Percent of final consumers</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="percent_of_final_consumers" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing channel face to face</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_channel_face_to_face" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing channel online</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_channel_online" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing channel cooperative</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_channel_cooperative" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing channel host organization</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_channel_organization" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing cost online (Monthly)</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_online (Monthly)" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing cost online (Yearly)</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_online (Yearly)" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing cost face to face (Monthly)</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_face_to_face (Monthly)" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing cost face to face (Yearly)</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_face_to_face (Yearly)" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing cost cooperative or BMO (Monthly)</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_cooperative (Monthly)" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Marketing cost cooperative or BMO (Yearly)</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_cooperative_or_BMO (Yearly)" />
+        </div>
+
+        <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
+          <span class="label-input100">Total marketing cost (Monthly)</span>
+          <input class="input100" type="text" name="question_13" index="" placeholder="total_marketing_cost (Monthly) (Monthly)" />
+        </div>
+
+          
+
         <div class="wrap-input100 input100-select bg1">
           <span class="label-input100">Needed Services *</span>
-          <div>
+          <div>                       
             <select class="js-select2" name="service">
               <option name="">Please choose</option>
               <option>eCommerce Bussiness</option>
