--- a/index.html
+++ b/index.html
@@ -323,9 +323,7 @@
           <input class="input100" type="text" name="question_13" index="" placeholder="total_marketing_cost (Monthly) (Monthly)" />
         </div>
 
-          
-
-        <div class="wrap-input100 input100-select bg1">
+        <!-- <div class="wrap-input100 input100-select bg1">
           <span class="label-input100">Needed Services *</span>
           <div>                       
             <select class="js-select2" name="service">
@@ -360,7 +358,8 @@
               </label>
             </div>
           </div>
-        </div>
+        </div> -->
+        
         <div class="container-contact100-form-btn">
           <button class="contact100-form-btn">
             <span>
