--- a/index.html
+++ b/index.html
@@ -100,266 +100,224 @@
         <span class="contact100-form-title"> LED POST ASSESESMENT FORM</span>
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Management tools used</span>
-          <input class="input100" type="text" name="question_1" index="" placeholder="Management_tools_used" />
+          <input class="input100" type="text" name="Management_tools_used" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Business Skill</span>
-          <input class="input100" type="text" name="question_2" index="" placeholder="Business_skill" />
+          <input class="input100" type="text" name="Business_skill" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Scale</span>
-          <input class="input100" type="text" name="question_3" index="" placeholder="Scale" />
+          <input class="input100" type="text" name="Scale" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Have you ever Applied for loan?</span>
-          <input class="input100" type="text" name="question_4" index="" placeholder="applied_for_loan" />
+          <input class="input100" type="text" name="applied_for_loan" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">How much applied for?</span>
-          <input class="input100" type="text" name="question_5" index="" placeholder="how_much_applied_for" />
+          <input class="input100" type="text" name="how_much_applied_for" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Amount received?</span>
-          <input class="input100" type="text" name="question_6" index="" placeholder="how_much_did_you_get" />
+          <input class="input100" type="text" name="how_much_did_you_get" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Date(DD/MM/YY)</span>
-          <input class="input100" type="text" name="question_7" index=""
-            placeholder="Input the date you recieved loan" />
+          <input class="input100" type="text" name="Input the date you recieved loan" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Interest Rate(%)</span>
-          <input class="input100" type="text" name="question_8" index="" placeholder="interest Rate" />
+          <input class="input100" type="text" name="interest Rate" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Percentage repaid</span>
-          <input class="input100" type="text" name="question_8" index="" placeholder="how_much_did_you_pay_back" />
+          <input class="input100" type="text" name="how_much_did_you_pay_back" />
         </div>
-
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Financial services recieved personal</span>
-          <input class="input100" type="text" name="question_9" index=""
-            placeholder="financial_services_recieved_personal" />
+          <input class="input100" type="text" name="financial_services_recieved_personal" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Financial services recieved business</span>
-          <input class="input100" type="text" name="question_10" index=""
-            placeholder="financial_services_recieved_business" />
+          <input class="input100" type="text" name="financial_services_recieved_business" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Financial services recieved botd</span>
-          <input class="input100" type="text" name="question_11" index=""
-            placeholder="financial_services_recieved_botd" />
+          <input class="input100" type="text" name="financial_services_recieved_botd" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Value of insurance received</span>
-          <input class="input100" type="text" name="question_12" index="" placeholder="value_of_insurance_received" />
+          <input class="input100" type="text" name="value_of_insurance_received" />
         </div>
 
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Insurance provided by </span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="insurance provided by " />
+          <input class="input100" type="text" name="insurance provided by " />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Date received insurance</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="date_received_insurance" />
+          <input class="input100" type="text" name="date_received_insurance" />
         </div>
-        
+
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Value of grants received</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="value_of_grants_received" />
+          <input class="input100" type="text" name="value_of_grants_received" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Grants provided by</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="grants provided by" />
+          <input class="input100" type="text" name="grants provided by" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Date received grants</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="date_received_grants" />
+          <input class="input100" type="text" name="date_received_grants" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">value of micro lease received</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="value_of_micro_lease_receiveds" />
+          <input class="input100" type="text" name="value_of_micro_lease_receiveds" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Micro lease provided by</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="micro lease provided by" />
+          <input class="input100" type="text" name="micro lease provided by" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Date received micro lease</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="date_received_micro_lease" />
+          <input class="input100" type="text" name="date_received_micro_lease" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Household business finance conflict</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="value_of_micro_credit_received" />
+          <input class="input100" type="text" name="value_of_micro_credit_received" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Profit spent on household</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="profit_spent_on_household" />
+          <input class="input100" type="text" name="profit_spent_on_household" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Dont need loan if I manage well</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="dont_need_loan_if_I_manage_well" />
+          <input class="input100" type="text" name="dont_need_loan_if_I_manage_well" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Most critical challenge to MSME loan</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="most_critical_challenge_to_MSME_loan" />
+          <input class="input100" type="text" name="most_critical_challenge_to_MSME_loan" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Number of female employees</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="number_of_female_employees" />
+          <input class="input100" type="text" name="number_of_female_employees" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Number of male employees</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder=" umber_of_male_employees" />
-        </div> 
+          <input class="input100" type="text" name=" umber_of_male_employees" />
+        </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Number of retailers</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="number_of_retailers" />
-        </div> 
+          <input class="input100" type="text" name="number_of_retailers" />
+        </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Percent of retailers</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="percent_of_retailers" />
+          <input class="input100" type="text" name="percent_of_retailers" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Number of wholesalers</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="Number_of_wholesalers" />
+          <input class="input100" type="text" name="Number_of_wholesalers" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Percent of wholesalers</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="percent_of_wholesalers" />
+          <input class="input100" type="text" name="percent_of_wholesalers" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Number of final consumers</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="number_of_final_consumers" />
+          <input class="input100" type="text" name="number_of_final_consumers" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Percent of final consumers</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="percent_of_final_consumers" />
+          <input class="input100" type="text" name="percent_of_final_consumers" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing channel face to face</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_channel_face_to_face" />
+          <input class="input100" type="text" name="marketing_channel_face_to_face" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing channel online</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_channel_online" />
+          <input class="input100" type="text" name="marketing_channel_online" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing channel cooperative</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_channel_cooperative" />
+          <input class="input100" type="text" name="marketing_channel_cooperative" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing channel host organization</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_channel_organization" />
+          <input class="input100" type="text" name="marketing_channel_organization" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing cost online (Monthly)</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_online (Monthly)" />
+          <input class="input100" type="text" name="marketing_cost_online (Monthly)" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing cost online (Yearly)</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_online (Yearly)" />
+          <input class="input100" type="text" name="marketing_cost_online (Yearly)" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing cost face to face (Monthly)</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_face_to_face (Monthly)" />
+          <input class="input100" type="text" name="marketing_cost_face_to_face (Monthly)" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing cost face to face (Yearly)</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_face_to_face (Yearly)" />
+          <input class="input100" type="text" name="marketing_cost_face_to_face (Yearly)" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing cost cooperative or BMO (Monthly)</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_cooperative (Monthly)" />
+          <input class="input100" type="text" name="marketing_cost_cooperative (Monthly)" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Marketing cost cooperative or BMO (Yearly)</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="marketing_cost_cooperative_or_BMO (Yearly)" />
+          <input class="input100" type="text" name="marketing_cost_cooperative_or_BMO (Yearly)" />
         </div>
 
         <div class="wrap-input100 validate-input bg1" data-validate="Please Type your answer">
           <span class="label-input100">Total marketing cost (Monthly)</span>
-          <input class="input100" type="text" name="question_13" index="" placeholder="total_marketing_cost (Monthly) (Monthly)" />
+          <input class="input100" type="text" name="total_marketing_cost (Monthly) (Monthly)" />
         </div>
 
-        <!-- <div class="wrap-input100 input100-select bg1">
-          <span class="label-input100">Needed Services *</span>
-          <div>                       
-            <select class="js-select2" name="service">
-              <option name="">Please choose</option>
-              <option>eCommerce Bussiness</option>
-              <option>UI/UX Design</option>
-              <option>Online Services</option>
-            </select>
-            <div class="dropDownSelect2"></div>
-          </div>
-        </div>
-        <div class="w-full dis-none js-show-service">
-          <div class="wrap-contact100-form-radio">
-            <span class="label-input100">What type of products do you sell?</span>
-            <div class="contact100-form-radio m-t-15">
-              <input class="input-radio100" id="radio1" type="radio" name="type-product" value="physical"
-                checked="checked" />
-              <label class="label-radio100" for="radio1">
-                Phycical Products
-              </label>
-            </div>
-            <div class="contact100-form-radio">
-              <input class="input-radio100" id="radio2" type="radio" name="type-product" value="digital" />
-              <label class="label-radio100" for="radio2">
-                Digital Products
-              </label>
-            </div>
-            <div class="contact100-form-radio">
-              <input class="input-radio100" id="radio3" type="radio" name="type-product" value="service" />
-              <label class="label-radio100" for="radio3">
-                Services Consulting
-              </label>
-            </div>
-          </div>
-        </div> -->
-        
         <div class="container-contact100-form-btn">
           <button class="contact100-form-btn">
             <span>
